# allocine-dataset-scraper

./: .coveragerc  .deepsource.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENT.md  Dockerfile  LICENSE.rst  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/workflows/: auto-test.yml  publish-docker.yml  test.yml
allocine_dataset_scraper/: allocine_dataset_scraper.py  cli.py  run.py  scraper.py  utils.py
data/: allocine_movies.csv
src/allocine_dataset_scraper/: config.py  run.py  schema.py  scraper.py  utils.py  validation.py
test/: conftest.py  test_allocine_dataset_scraper.py  test_scraper.py  test_utils.py
test/data/: movie_exception.txt  page_same_movie_id.txt
tests/: conftest.py  test_e2e.py  test_run.py  test_scraper.py  test_utils.py
tests/data/: movie.txt  page.txt  test_dataframe.csv
