[project]
name = "allocine-dataset-scraper"
version = "2.2.2"
description = "Scraping movies informations available on Allocine.fr"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.29.0",
    "beautifulsoup4>=4.12.2",
    "pandas>=2.0.1",
    "numpy>=1.24.3",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "dateparser>=1.1.8",
    "click>=8.1.3",
    "tqdm>=4.65.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.2.0",
    "mypy>=1.10.1",
    "types-requests",
    "types-dateparser",
    "types-click",
    "types-tqdm",
]
[tool.uv]
package = true

[project.scripts]
fetch-allocine = "allocine_dataset_scraper.run:cli"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.mypy]
ignore_missing_imports = true
