[project]
name = "allocine-dataset-scraper"
version = "2.3.1"
description = "Scraping movies informations available on Allocine.fr"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
    "beautifulsoup4>=4.14.3",
    "pandas>=3.0.3",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "loguru>=0.7.3",
    "dateparser>=1.4.0",
    "click>=8.4.1",
    "tqdm>=4.67.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
    "pyright",
    "types-requests",
    "types-dateparser",
    "types-click",
    "types-tqdm",
    "pytest-cov>=7.1.0",
    "annotated-types>=0.7.0",
]
[tool.uv]
package = true

[project.scripts]
fetch-allocine = "allocine_dataset_scraper.run:cli"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.pyright]
include = ["src", "tests"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"
pythonPlatform = "All"
