[metadata]
name = allocine_dataset_scraper
version = file:VERSION
author = Olivier Maillot
author_email = contact@olivier-maillot.fr
description = Scraper for Allocine
url = https://github.com/ibmw/allocine-dataset-scraper
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = 
    Allocine
    Scraper
    requests
    beautifulsoup4
    bs4
license = MIT
classifiers =
    Framework :: Pytest
    Framework :: Flake8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options.packages.find]
where = allocine_dataset_scraper
exclude =
    tests

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
packages = find_namespace:
package_dir =
    = allocine_dataset_scraper
setup_install =
    setuptools >= 40.9.0
    wheel
install_requires =
    beautifulsoup4==4.10.0
    click==8.0.1
    dateparser==1.0.0
    loguru==0.5.3
    pandas==1.3.3
    numpy==1.21.2
    python-dotenv==0.19.0
    requests==2.26.0
    tqdm==4.62.3

[options.package_data]
* =
    *.txt
    *.rst
    *.md

[options.entry_points]
console_scripts =
    fetch-allocine = allocine_dataset_scraper.run:main

[options.extras_require]
dev = 
    black==21.5b2
    flake8==3.9.2
    flake8-bugbear==21.3.2
    flake8-comprehensions==3.1.0
    isort==5.9.3
    mypy==0.910
    pre-commit==2.15.0
    pytest
    pytest-cov
    types-requests
    types-dateparser

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
files=allocine_dataset_scraper,test
ignore_missing_imports=true

[tool:pytest]
testpaths=test/
filterwarnings = 
    ignore:The localize method is no longer necessary, as this time zone supports the fold attribute
