[metadata]
name = allocine-dataset-scraper
version = file:VERSION
author = Olivier Maillot
author_email = contact@olivier-maillot.fr
description = Scraper for Allocine
url = https://github.com/ibmw/allocine-dataset-scraper
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = 
    Allocine
    Scraper
    requests
    beautifulsoup4
    bs4
license = MIT
classifiers =
    Framework :: Pytest
    Framework :: Flake8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    =src
packages = find_namespace:
zip_safe = False
include_package_data = True
python_requires = >= 3.12
setup_install =
    setuptools >= 70.3.0
    wheel
install_requires =
    beautifulsoup4>=4.12.2
    click>=8.1.3
    dateparser>=1.1.8
    loguru>=0.7.0
    pandas>=2.0.1
    numpy>=1.24.3
    python-dotenv>=1.0.0
    requests>=2.29.0
    tqdm>=4.65.0

[options.packages.find]
where = src

[options.package_data]
* =
    *.txt
    *.rst
    *.md

[options.entry_points]
console_scripts =
    fetch-allocine = allocine_dataset_scraper.run:cli

[options.extras_require]
dev = 
    black>=23.3.0
    flake8>=6.0.0
    flake8-bugbear>=23.3.23
    flake8-comprehensions>=3.12.0
    isort>=5.13.2
    mypy>=1.2.0
    pre-commit>=3.3.1
    pytest
    pytest-cov
    types-requests
    types-dateparser

[flake8]
ignore = 
    E121, E123, E126, E226, E24, E704, 
    E203, E266, E231, E722,E501, W503, W504,
    FS003, E402
max-line-length = 88

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
files=src,tests
ignore_missing_imports = True

[tool:pytest]
testpaths=tests/
filterwarnings = 
    ignore:The localize method is no longer necessary, as this time zone supports the fold attribute
